# RaggieCode

./: .aiignore  .gitignore  AGENTS.md  README.md  pyproject.toml  raggie.workflow2  requirements.txt  roles.yaml
docs/: indexer.md
src/: chat.py  cli.py  interactive.py  raggie.py
src/Agent/: agent.py  chat_history_db.py  command.py  config.py  effort_levels.py  git_manager.py  tools.py
src/Commands/: __init__.py  effort.py  global_todo.py  help.py  reasoning.py  redo.py  shell.py  stream.py  undo.py  unlimited_effort.py  window_size.py
src/RAG/: document.py  find.py  graph.py
src/Tools/: GetFileCodeStructure.py  GetSymbolSourceCode.py  __init__.py  ask_user.py  dispatch_subagent.py  document.py  edit_symbol.py  fuzzy_search.py  list_dir.py  read.py  read_image.py  remove.py  replace.py  search.py  shell.py  shell_background.py  shell_kill.py  temp_background_service.py  todo_list.py  utils.py  view_changes.py  walk_call_tree.py  web_fetch.py  web_search.py  write.py
src/config/: coder_system_prompt.md  roles.json  tools.json
src/indexing/: cli.py  code_index_sdk.py  code_indexer.py  db_schema.py  export_to_json.py  extractors.py  file_utils.py  language_config.py  models.py  node_utils.py  parse_worker.py  queries.py  sdk_examples.py
src/skills/: manager.py  tool.py
