[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "raggiecode"
version = "0.2.0"
description = "AI Coding Agent"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "tree-sitter==0.25.2",
    "tree-sitter-python==0.25.0",
    "tree-sitter-go==0.25.0",
    "tree-sitter-c-sharp==0.21.0",
    "tree-sitter-javascript==0.21.0",
    "tree-sitter-typescript==0.21.0",
    "tree-sitter-rust==0.24.2",
    "tree-sitter-zig==1.1.2",
    "tree-sitter-elixir==0.3.5",
    "tree-sitter-cpp==0.23.4",
    "tree-sitter-c==0.23.4",
    "tree-sitter-php==0.24.1",
    "tree-sitter-language-pack==1.8.1",
    "rich>=13.7.1",
    "pathspec==0.12.1",
    "openai==2.43.0",
    "prompt_toolkit",
    "xxhash",
    "ddgs",
    "dulwich",
    "ripgrep_rs",
]

[project.scripts]
raggie = "raggie:main"

[tool.setuptools]
py-modules = ["raggie", "cli", "interactive"]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
config = ["*"]

[tool.pytest.ini_options]
norecursedirs = ["_repos", ".git", "dist", "build"]
